# tiny-json-log

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
tests/: test_jsonformatter.py
tiny_json_log/: __init__.py
