[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tiny-json-log"
version = "0.0.3"
description = "Compact/easy to use json formatter"
authors = ["gramal"]
readme = "README.md"
repository = "https://github.com/ggramal/tiny-json-log"
homepage = "https://github.com/ggramal/tiny-json-log"
license = "MIT"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "tiny_json_log" },
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.8.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

